# SpamClassifier

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deployment.yml
Backend/: Dockerfile  requirements.txt
Backend/src/: config.py  main.py
Backend/src/notebooks/: utils_notebook.ipynb
bruno/: bruno.json
bruno/Health/: ping.bru
bruno/Predict/: predict-empty-error.bru  predict-ham.bru  predict-spam.bru  predict-url-spam.bru
bruno/Spam-Classification/: opencollection.yml
bruno/environments/: gcp.bru
config/: config.ini
docs/: GCP_SETUP.md
model/: spam_classifier.h5  tokenizer.pickle
src/: .env  config.py  data_analysis.py  inference.py  main.py  main_old.py  smoke_test.py  train.py
