[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-classifier"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "wordcloud>=1.9.3",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
